<resources>
    <string name="app_name">My Application</string>
    <string name="ustra_merchant">USTRA MERCHANT</string>
    <string name="submit">submit</string>
    <string name="enter_name_please">Enter Name please</string>
    <string name="get_online">Get online</string>
    <string name="get_offline">Get offLine</string>
    <string name="adhar_card">Adhar Card</string>
    <string name="pan_card">PAN Card</string>
    <string name="seat_capacity">Seat Capacity</string>
    <string name="name">Name</string>
    <string name="saloon_name">Saloon Name</string>
    <string name="register">Register</string>
    <string name="verify_location">Verify Location</string>
    <string name="todo">TODO</string>
    <string name="_91">+91</string>
    <string name="we_will_send_you_an_otp_in_this_given_mobile_number">We will send you an OTP in this given mobile number</string>
</resources>