<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration">

    <EditText
        android:id="@+id/name"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:hint="@string/name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051"
        tools:ignore="Autofill,TextContrastCheck,TextFields" />


    <EditText
        android:id="@+id/saloonName"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:hint="@string/saloon_name"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.149"
        tools:ignore="TextFields"
        android:autofillHints="" />

    <EditText
        android:id="@+id/Seat"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:hint="@string/seat_capacity"
        app:layout_constraintBottom_toTopOf="@+id/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.358"
        tools:ignore="Autofill,TextContrastCheck,TextFields" />

    <EditText
        android:id="@+id/Acard"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:hint="@string/adhar_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.336"
        tools:ignore="Autofill,TextFields,TextContrastCheck" />

    <EditText
        android:id="@+id/Pcard"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:hint="@string/pan_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.461"
        tools:ignore="Autofill,TextContrastCheck,TextFields" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Pcard" />


</androidx.constraintlayout.widget.ConstraintLayout>